--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -2,10 +2,16 @@
 
 {% block content %}
     <h2>Agendamentos</h2>
+    <a href="evento">
+        <button type="button">Novo Evento</button>
+    </a>
     <ul>
         {% for evento in eventos %}
-            <li>{{ evento.titulo }} - {{ evento.descricao }} - {{ evento.get_data_evento }}</li>
+            <li>
+                {{ evento.titulo }} | {{ evento.local }} | {{ evento.get_data_evento }}
+                (<a href="evento/?id={{ evento.id }">Editar</a>
+                /<a href="evento/delete/{{ evento.id }}/">Excluir</a>)
+            </li>
         {% endfor %}
     </ul>
-
 {% endblock %}
